--- a/20240809-202408.md
+++ b/20240809-202408.md
@@ -1,4 +1,4 @@
-# 週報　2024/08/09 ~ 2024/08/0
+# 週報　2024/08/09 ~ 2024/08/16
 
 # 目標
 バックエンドエンジニアとして自社開発企業に内定
@@ -28,7 +28,7 @@
 ## 今週やったこと：実際にやったこと・実稼働
 - Task1
     - CS上級(15h)
-        → スタックの章で止まっている
+        → キューの章で止まっている
     
 - Task2
     -  
@@ -37,36 +37,30 @@
 
     
 ## 所感・学び
-- よかった点：
-- 課題点：
-- 詳細：
--   
-- 　
+- よかった点：15分とりあえずスタートを何日かクリアすることができたこと自体がよかった
+- 　ただ進み具合に大きく影響するのは体調面の影響が大きいと感じた
+- 　具体的には飲むコーヒーの種類を変更したら劇的に変わったがカフェイン頼りだけにはしたくないので
+- 　少し飲む量を減らすことを実践する
+
+- カリキュラムの課題点：キューの章がなかなか突破できない
+- 詳細：両端キューのスライディングウインドウを実装したいと思った時にパッと実装ができない
+- 両端キュー(3)のスライディングウインドウの実装内容を読んで意味を理解することはできるのですが、
+何も見ずにコーディングをすることができない課題があります（ヒントの練習問題の中にて）。ちょっと進まないのでコーディングの問題を解きながら実装に慣れていきたいと思います
 - 　　
-- 　　
-- 　　　
-- 　　　
-
-- 　
-- 　　
-- 　　
-  
-  　　　　
-  　　　
 
 
-  -金曜
-  　15分-OK（キューの説明コードを読む）
-  　何時間-
-  -土曜
-  -日曜
-  -月曜
-  -
-  -
+  -金曜15分-OK
+  -土曜✖︎
+  -日曜○15分-OK
+  -月曜○15分-OK
+  -火曜○15分-OK
+  -水曜✖
+  -木曜✖︎
+  -金曜○15分-OK
 
 
 
-学習内容については結構抜けてしまっているところで再確認する点が多かった
+学習内容については理解はできているがコーディングができないという感覚です
 
 
 
